# data_experiments

./: .gitignore  LICENSE  README.md
conda_pgsql_ext/: Dockerfile  Makefile  README.md  condaversion--1.0.sql  condaversion.control  condaversion.cpp  download.sh
conda_pgsql_ext/tests/expected/: compare.out  in_out_success.out  in_out_syntax_error.out
conda_pgsql_ext/tests/sql/: compare.sql  in_out_success.sql  in_out_syntax_error.sql
conda_pgsql_rust_ext/: .gitignore  Cargo.toml  conda_pgsql_rust_ext.control
conda_pgsql_rust_ext/src/: lib.rs
conda_pgsql_rust_ext/tests/pg_regress/expected/: 1_input.out  2_output.out  3_output_original.out  4_order.out  5_hash.out  6_aggregate_max.out  7_aggregate_min.out  8_nullable.out  9_errors.out
conda_pgsql_rust_ext/tests/pg_regress/sql/: 1_input.sql  2_output.sql  3_output_original.sql  4_order.sql  5_hash.sql  6_aggregate_max.sql  7_aggregate_min.sql  8_nullable.sql  9_errors.sql
conda_ranges/: Cargo.toml  README.md
conda_ranges/src/: main.rs
conda_repodata_duckdb/: README.md  get_files.py  load_data.sql  load_data_duckdb.sql  load_data_sqlite.sql
