[package]
name = "conda_pgsql_rust_ext"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_conda_pgsql_rust_ext"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg17"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg_test = ["dep:pretty_assertions"]
no-schema-generation = ["pgrx/no-schema-generation", "pgrx-tests/no-schema-generation"]

[dependencies]
pgrx = "0.14.3"
pretty_assertions = { version = "1.4.0", optional = true }
rattler_conda_types = "0.34.0"
serde = "1.0.219"

[dev-dependencies]
pgrx-tests = "0.14.3"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
